# summarizer-huggingface-api

./: README.md  pyproject.toml
lesso/: main.py
tests/: test_lesso.py
